# GraphicsFundamentals

./: .gitignore  GraphicsFundamentals.sln
GraphicsFundamentals/: CELLCamera.hpp  CELLMath.hpp  CELLTimestamp.cpp  CELLTimestamp.h  GraphicsFundamentals.vcxproj  GraphicsFundamentals.vcxproj.filters  Image.hpp  Raster.cpp  Raster.h  window.cpp
note/: RPC.md  cmake笔记.md
note/OpenGL/: OpenGL基础01.md  OpenGL基础02.md
note/shader/: 2D_SDF_Render.glsl  3D_SDF_Render.glsl  Bezier.glsl  SDF_circle.glsl  fraction.glsl  ground.glsl  noise.glsl  texture.glsl  tutorial.glsl  universe_within.glsl
note/图形学基础/: 3D-数理基础.md  windows编程.md  建立开发环境-创建一个窗口.md  摄像机.md  点线面光栅画.md  矩阵操作.md  纹理.md  纹理基础.md  绘图基础.md
note/闫令琪-现代计算机图形学基础/: RayTracing.md  基于物理的渲染：基于图像照明(Image-based Lighting).md  计算机图形学一(补充)：特征分解和奇异值分解的几何解释.md  计算机图形学一：基础变换矩阵总结(缩放，旋转，位移).md  计算机图形学七：纹理映射(Texture Mapping)及Mipmap技术.md  计算机图形学三(补充)：重心坐标(barycentric coordinates)详解及其作用.md  计算机图形学三：直线光栅化的数值微分算法,中点Brensenham算法和三角形的光栅化.md  计算机图形学九：隐式曲面(代数形式,CSG, 距离函数,分型几何)与显式曲面.md  计算机图形学二：视图变换(坐标系转化，正交投影，透视投影，视口变换).md  计算机图形学五：局部光照模型(Blinn-Phong 反射模型)与着色方法(Phong Shading).md  计算机图形学八：纹理映射的应用(法线贴图，凹凸贴图与阴影贴图等相关应用的原理详解).md  计算机图形学六：正确使用重心坐标插值(透视矫正插值(Perspective-Correct Interpolation))和图形渲染管线总结.md  计算机图形学十一：几何3—曲面细分(Mesh subdivision)与曲面简化(Mesh Smplication).md  计算机图形学十三：利用包围盒技术加速光线追踪（KD-Tree and BVH）.md  计算机图形学十二：Whitted-Style光线追踪原理详解及实现细节.md  计算机图形学十五：全局光照(蒙特卡洛路径追踪).md  计算机图形学十六：照相机与透镜.md  (+4 more)
note/闫令琪-现代计算机图形学基础/RayTracing/: CMakeLists.txt  RayTracing.md  RayTracing2.md
note/闫令琪-现代计算机图形学基础/RayTracing/src/: RayTracing.cpp
